--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Tienda</title>
+  <title>Codo Tienda </title>
   <!-- viewport: metaetiqueta HTML5 que controla el ancho de una página web en función del dispositivo del usuario. -->
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0, minimum_scale=1.0" > 
   <link rel="stylesheet" href="./css/estilos.css" >
@@ -15,13 +15,19 @@
     <header class="header">
 
       <div class="menu">
-        <div class="logo">      </div>
-        <div class="nav">       </div>
-        <div class="social">    </div>
+        <div class="logo">     
+          <h2>Hot Sale</h2>
+        </div>
+        <div class="nav">    
+          <h2>Ofertas</h2>
+        </div>
+        <div class="social">    
+          <h2>Contacto</h2>
+        </div>
       </div>
 
       <div class="texto-principal">
-        <h1></h1>
+        <h1>Bienvenidos a Codo Tienda!!</h1>
       </div>
     </header>
     <section class="section"> 
