--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 
 <head>
   <meta charset="utf-8">
-  <title>Codo Tienda </title>
+  <title> Tienda Codo </title>
   <!-- viewport: metaetiqueta HTML5 que controla el ancho de una página web en función del dispositivo del usuario. -->
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0, minimum_scale=1.0" > 
   <link rel="stylesheet" href="./css/estilos.css" >
