--- a/index.html
+++ b/index.html
@@ -16,7 +16,9 @@
 
       <div class="menu">
         <div class="logo">     
-          <h2>Hot Sale</h2>
+          <!-- <h2>Hot Sale</h2> -->
+          <img src="./images/logo.png" height="100" width="100" >   
+          <!-- style="margin-left: 5px;" -->
         </div>
         <div class="nav">    
           <h2>Ofertas</h2>
