--- a/index.html
+++ b/index.html
@@ -2,56 +2,88 @@
 
 <head>
   <meta charset="utf-8">
-  <title> Tienda Codo </title>
+  <title> Tienda de ropa </title>
   <!-- viewport: metaetiqueta HTML5 que controla el ancho de una página web en función del dispositivo del usuario. -->
   <meta name="viewport" content="width=device-width, user-scalable=no, initial-scale=1.0 maximun-scale=1.0, minimum_scale=1.0" > 
   <link rel="stylesheet" href="./css/estilos.css" >
+  <link rel="stylesheet" href="https://use.fontawesome.com/releases/v5.8.1/css/all.css" integrity="sha384-50oBUHEmvpQ+1lW4y57PTFmhCaXp0ML5d60M1M7uH2+nqUivzIebhndOJK28anvf" crossorigin="anonymous">
   
 </head>
   
 <body>
-
+  
   <div class="padre">
     <header class="header">
 
       <div class="menu">
+
         <div class="logo">     
-          <!-- <h2>Hot Sale</h2> -->
-          <img src="./images/logo.png" height="100" width="100" >   
+          <img src="./images/logo.png" height="120" width="120" >   
           <!-- style="margin-left: 5px;" -->
         </div>
-        <div class="nav">    
-          <h2>Ofertas</h2>
+
+        <div class="nav"> 
+            <h2><a href="">Ropa</a></h2>
         </div>
-        <div class="social">    
-          <h2>Contacto</h2>
+
+        <div class="nav"> 
+          <h2><a href="">Calzado</a></h2>
+      </div>
+
+        <div class="social">  
+          <h2><a href="#">Social</a></h2>
         </div>
+
       </div>
 
       <div class="texto-principal">
-        <h1>Bienvenidos a Codo Tienda!!</h1>
+        <h1>Bienvenidos a la Tienda!!</h1>
       </div>
     </header>
     <section class="section"> 
 
         <div class="articulos">
-          <article class="article"></article>
-          <article class="article"></article>
-          <article class="article"></article>
-          <article class="article"></article>
+          <article class="article">            
+            <img src="./images/portada_hombre.png" width="450px" height="250px" onmouseover="this.width=455;this.height=255;" onmouseout="this.width=450;this.height=250;"  alt="zapatillas para hombres">
+            <p>Calzado Hombres 40% OFF</p>
+          </article>
+          <article class="article">                       
+            <img src="./images/portada_mujer.png" width="450px" height="250px" onmouseover="this.width=455;this.height=255;" onmouseout="this.width=450;this.height=250;" alt="zapatillas para hombres">
+            <p>Calzado Mujeres en liquidación </p>
+          </article>
+          <article class="article">                        
+            <img src="./images/portada_hombre.png" width="450px" height="250px" onmouseover="this.width=455;this.height=255;" onmouseout="this.width=450;this.height=250;" alt="zapatillas para hombres">
+            <p>Pares unicos</p>
+          </article>
+          <article class="article">                        
+            <img src="./images/portada_ninios.png" width="450px" height="250px" onmouseover="this.width=455;this.height=255;" onmouseout="this.width=450;this.height=250;" alt="zapatillas para hombres">
+            <p>Calzado Niños 2 x 1</p>
+          </article>
 
           <nav class="navegacion"></nav>
         </div>
 
         <aside class="aside">
-          <div class="publicidad"></div>
-          <div class="publicidad"></div>
+          <div class="publicidad">
+            <p>Los pies te llevan a soñar..</p>
+            <iframe width="360" height="180" src="https://www.youtube.com/embed/U3Y7Z42qhlQ?si=iwU4zNEH9oallaMk" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>            
+          </div>
+          <div class="publicidad">
+            <p>El maratón del año</p>
+            <img src="./images/maraton.png" width="360" height="180" alt="zapatillas para hombres">
+          </div>
+          <div class="publicidad">
+            <p>Tus zapatillas marcan tu ritmo..</p>
+            <iframe width="360" height="180" src="https://www.youtube.com/embed/SaMG5cM5ORk?si=XQBV58wgqCv_6CxN" title="YouTube video player" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture; web-share" referrerpolicy="strict-origin-when-cross-origin" allowfullscreen></iframe>
+          </div>
         </aside>
 
     </section>
 
     <footer class="footer">
-      <nav class="pie"></nav>
+      <center><nav class="pie">Lo que necesites, lo tenemos... <i class="fa fa-facebook" aria-hidden="true"></i> </nav></center>
+      <i class="fa fa-facebook"></i>
+            
     </footer>
   </div>
 
